# ai-gene-review

./: #AGENTS.md#  .#AGENTS.md  .gitattributes  .gitignore  .linkml-reference-validator.yaml  .yamlfix.toml  404.html  AGENTS.md  AI4CUI_V2_ARCHITECTURE.md  ARBA00085337_review_summary.md  ATG7_CURATION_INDEX.md  ATG7_MODIFICATION_GUIDE.md  ATG7_curation_review.py  CAEEL_PRIORITY3_CURATION_ACTIONS.md  CAEEL_PROTEOSTASIS-pathway.md  CLAUDE.md  DEEP_RESEARCH_REFACTORING.md  FILES-INDEX.md  FIXING_SUPPORTING_TEXT.md  HSFA1B-ANNOTATION-ACTIONS.txt  HSFA1B-CURATION-SUMMARY.md  IMODULONDB_INTEGRATION_PLAN.md  README.md  RULE_ANALYSIS_FINAL_SUMMARY.md  RULE_ANALYSIS_SCHEMA_IMPLEMENTATION.md  SPECIES_CODES.md  SURVEILLANCE_IMMUNITY_ANNOTATION_EDITS.md  SURVEILLANCE_IMMUNITY_CURATION_CHECKLIST.md  SURVEILLANCE_IMMUNITY_REVIEW_INDEX.md  auto_fix_warnings.py  cyberian-farm.yaml  fix_all_remaining.py  fix_final_warnings.py  fix_gpc_final.py  fix_gpc_reviews.py  fix_m2_quotes.py  fix_substring_warnings.py  fix_warnings.sh  form.html  index.html  (+17 more)
analysis/esmfold2/: README.md  RESULTS_COA6_ESMFOLD2.md  RESULTS_CYC1_UQCRFS1_ESMFOLD2.md  RESULTS_MODEL_A_1CU_ESMFOLD2.md  RESULTS_MODEL_A_CU_ESMFOLD2.md  RESULTS_MODEL_C_ESMFOLD2.md  RESULTS_MODEL_C_FULL_ESMFOLD2.md  RESULTS_PSMB5_PSMA1_ESMFOLD2.md  pyproject.toml  run_esmfold2.py  validate_cua_vs_pdb.py
analysis/esmfold2/coa6_out/: esmfold2_response.json
analysis/esmfold2/cox2_model_c_out/: esmfold2_response.json
analysis/esmfold2/cox2_sco1_model_a_1cu_out/: confidence_esmfold2.json  esmfold2_response.json
analysis/esmfold2/cox2_sco1_model_a_cu_out/: esmfold2_model_0.cif
analysis/esmfold2/cox2_sco1_model_a_out/: esmfold2_model_0.cif  esmfold2_response.json
analysis/esmfold2/cyc1_uqcrfs1_domains_out/: confidence_esmfold2.json
analysis/esmfold2/model_c_full_out/: esmfold2_response.json
analysis/esmfold2/psmb5_psma1_out/: confidence_esmfold2.json  esmfold2_model_0.cif
genes/human/ABCE1/ABCE1-bioinformatics/: RESULTS.md  analyze.py  pyproject.toml
genes/human/GATA3/GATA3-bioinformatics/: 01_domain_analysis.py  02_conservation_analysis.py  RESULTS.md  (+12 more)
(+107592 files in other folders)
