[project]
name = "esmfold2-complex-pilot"
version = "0.1.0"
description = "ESMFold2 (Biohub/biohub.ai) caller for protein complex attribution pilots"
requires-python = ">=3.10"
dependencies = [
    # Biohub ESM SDK (MIT). Provides SequenceStructureForgeInferenceClient and
    # the structure input builder used to submit multi-chain complexes.
    "esm",
    # Used by the shared analyzers (e.g. analysis/complex_iii_boltz/analyze_output.py)
    # to read the CIF this caller writes.
    "biopython",
]
