[project]
name = "esmfold2-complex-pilot"
version = "0.1.0"
description = "ESMFold2 (Biohub/biohub.ai) caller for protein complex attribution pilots"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Biohub ESM SDK (MIT). Provides SequenceStructureForgeInferenceClient and
    # fold_all_atom for multi-chain complexes. The PyPI wheel lags the complex
    # API, so pin the documented GitHub SDK surface by commit SHA.
    "esm @ git+https://github.com/Biohub/esm.git@975722d72d20104261b33e2e9cce98f30c031037",
    # Used by the shared analyzers (e.g. analysis/complex_iii_boltz/analyze_output.py)
    # to read the CIF this caller writes.
    "biopython",
]
