[project]
name = "abce1-bioinformatics"
version = "0.1.0"
description = "Sequence-level analysis of human ABCE1 (P61221) supporting its gene review"
requires-python = ">=3.10"
dependencies = []

# analyze.py uses only the Python standard library, so there are no
# third-party dependencies. Run with `uv run python analyze.py` or `python3 analyze.py`.
